Added authorization to vault upload
